added mute and unmute

--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Video Demo - Transform Your Experience</title>
 </head>
+
 <body>
     <div class="container">
         <div class="hero-section">
             <h1 class="hero-title">Experience Innovation</h1>
-            <p class="hero-subtitle">Discover the future through our immersive video experience that transforms how you see possibilities</p>
+            <p class="hero-subtitle">Discover the future through our immersive video experience that transforms how you
+                see possibilities</p>
         </div>
 
         <div class="video-container" id="videoContainer">
             <div class="video-wrapper">
-                <video 
-                    id="mainVideo" 
-                    muted 
-                    loop 
-                    playsinline 
-                    webkit-playsinline
-                    preload="metadata"
-                    poster="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='900' height='506'%3E%3Crect width='100%25' height='100%25' fill='%23667eea'/%3E%3Ctext x='50%25' y='50%25' font-size='24' fill='white' text-anchor='middle' dy='.3em'%3ELoading Video...%3C/text%3E%3C/svg%3E"
-                >
-                    <source src="https://sample-videos.com/zip/10/mp4/SampleVideo_1280x720_1mb.mp4" type="video/mp4">
-                    <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                <video id="mainVideo" muted loop playsinline webkit-playsinline preload="metadata"
+                    poster="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='900' height='506'%3E%3Crect width='100%25' height='100%25' fill='%23667eea'/%3E%3Ctext x='50%25' y='50%25' font-size='24' fill='white' text-anchor='middle' dy='.3em'%3ELoading Video...%3C/text%3E%3C/svg%3E">
+                    <source src="/mitolyn.mp4"
+                        type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="video-overlay"></div>
@@ -33,6 +29,12 @@
                 <div class="loading-overlay" id="loadingOverlay">
                     <div class="spinner"></div>
                 </div>
+
+                <div class="unmute-banner" id="unmuteBanner">
+                    <div class="icon">🔇</div>
+                    <div class="text">Click To Unmute</div>
+                </div>
+                <div class="video-timer" id="videoTimer">00:00 / 00:00</div>
             </div>
         </div>
 
@@ -44,20 +46,24 @@
             <div class="feature">
                 <div class="feature-icon">🚀</div>
                 <h3 class="feature-title">Lightning Fast</h3>
-                <p class="feature-text">Experience blazing fast performance across all devices with optimized streaming technology</p>
+                <p class="feature-text">Experience blazing fast performance across all devices with optimized streaming
+                    technology</p>
             </div>
             <div class="feature">
                 <div class="feature-icon">📱</div>
                 <h3 class="feature-title">Mobile Optimized</h3>
-                <p class="feature-text">Seamlessly works on iOS, Android, and all mobile platforms with responsive design</p>
+                <p class="feature-text">Seamlessly works on iOS, Android, and all mobile platforms with responsive
+                    design</p>
             </div>
             <div class="feature">
                 <div class="feature-icon">✨</div>
                 <h3 class="feature-title">Premium Quality</h3>
-                <p class="feature-text">High-definition video streaming with adaptive quality based on your connection</p>
+                <p class="feature-text">High-definition video streaming with adaptive quality based on your connection
+                </p>
             </div>
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
